// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile snapshots renders correctly 1`] = `
<View>
  <Text>
    Adrien Deschenaux
  </Text>
  <Text>
    EPFL Student
  </Text>
</View>
`;

exports[`Profile snapshots renders correctly 2`] = `
<View>
  <Text>
    Voltaire
  </Text>
  <Text>
    Philosopher
  </Text>
</View>
`;

exports[`Profile snapshots renders correctly 3`] = `
<View>
  <Text>
    Claude Debussy
  </Text>
  <Text>
    Composer
  </Text>
</View>
`;
